# Practica12

./: CMakeLists.txt  readme.md
assets/: BaseDatos.txt
include/: Arboles.h  CadenaTexto.h  Constructor.h  ListaNodosArbol.h  Utilidades.h
src/: CMakeLists.txt  main.c
src/Nucleo/: Arboles.c  CMakeLists.txt  Constructor.c  ListaNodosArbol.c  Utilidades.c
test/: CMakeLists.txt  PruebasConstructor.c
