add_executable(PruebasConstructor PruebasConstructor.c)
target_link_libraries(PruebasConstructor PUBLIC Nucleo)
if (WIN32)
    set(ARCHIVO "B:\\BaseDatos.txt")
else (LINUX)
    set(ARCHIVO "${CMAKE_SOURCE_DIR}/assets/BaseDatos.txt")
endif ()
target_include_directories(PruebasConstructor PUBLIC ${CMAKE_SOURCE_DIR}/include)
add_test(NAME PruebaExistenciaArchivo COMMAND PruebasConstructor 1 ${ARCHIVO})
add_test(NAME PruebaNombreRaiz COMMAND PruebasConstructor 2 ${ARCHIVO})
add_test(NAME PruebaConstruirArbol COMMAND PruebasConstructor 3 ${ARCHIVO})
add_test(NAME PruebasMaterias COMMAND PruebasConstructor 5 ${ARCHIVO})